# ispy2_mri

./: .gitignore  Changelog.md  Notes.md  README.md  pyproject.toml
ispy2-mri/: LICENSE.txt  README.md  pyproject.toml
ispy2-mri/src/ispy2_mri/: __init__.py
src/ispy2_mri/: __about__.py  __init__.py  flowlayout.py  ispy2_gui.py  ispy2_mri.py  tqt.py
